--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -188,6 +188,9 @@
       "max": "Maximum",
       "standard_deviation": "Standard deviation",
       "variance": "Variance",
+      "range": "Range",
+      "sum": "Sum",
+      "count": "Count",
       "geometry_mean": "Geometric mean",
       "harmonic_mean": "Harmonic mean"
     },
