--- a/src/i18n/sk.json
+++ b/src/i18n/sk.json
@@ -188,6 +188,9 @@
       "max": "Maximum",
       "standard_deviation": "Štandardná odchýlka",
       "variance": "Variabilita",
+      "range": "Rozsah",
+      "sum": "Súčet",
+      "count": "Počet",
       "geometry_mean": "Geometrický priemer",
       "harmonic_mean": "Harmonický priemer"
     },
